# Scrcpy-launcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
.claude/: index.json
capabilities/: default.json
docs/: backend_guide.md  frontend_guide.md
src/: adb_sync.rs  commands.rs  config.rs  lib.rs  main.rs  scrcpy.rs  tray.rs
src-tauri/: tauri.conf.json
tests/: integration_tests.rs
