[package]
name = "scrcpy-launcher"
version = "2.0.0"
description = "A GUI launcher for scrcpy"
authors = ["LiJunlei"]
edition = "2021"

[lib]
name = "scrcpy_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
